Добавил псевдоклас карренту, експеремнтирую с портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,11 @@
                     <li class="portfolio-filter-item grid-item">
                         <a href="" class="portfolio-filter-link-item">
                             <img src="./images/images-portfolio/img(8).jpg" alt="Команда" width="370" height="294">
+                            <div class="portfolio-description">
+                                <p>Технокряк это современная площадка распространения коронавируса. 
+                                   Компании используют эту платформу для цифрового шпионажа и атак 
+                                   на защищённые сервера конкурентов.</p>
+                            </div>
                     <div class="portfolio-expo">
                             <h3 class="portfolio-section-object">Технокряк</h3>
                             <p class="portfolio-section-area">Веб-сайт</p>
